erDiagram
  RESTAURANTES ||--o{ VAGAS : cria
  VAGAS ||--o{ CONTRATACOES : gera
  CANDIDATOS ||--o{ CONTRATACOES : recebe
  CANDIDATOS ||--o{ CANDIDATO_SELOS : tem
  CARGOS ||--o{ VAGAS : classifica
  CARGOS ||--o{ CANDIDATOS : posiciona
  AREAS ||--o{ CARGOS : contem

  RESTAURANTES {
    uuid id PK
    text nome
    text cpf_cnpj
    text endereco
    text telefone
    int nivel_exigencia "opcional MVP"
  }

  AREAS {
    text id PK "cozinha|salao|bar"
  }

  CARGOS {
    uuid id PK
    text area_id FK
    text nome "auxiliar|chefe|bartender..."
    int nivel
  }

  VAGAS {
    uuid id PK
    uuid restaurante_id FK
    uuid cargo_id FK
    date data
    time horario_inicio
    time horario_fim
    int qtd_pessoas
    text status "aberta|preenchida|cancelada"
  }

  CANDIDATOS {
    uuid id PK
    text nome
    text documento
    text endereco
    text telefone
    uuid cargo_id FK
    numeric pretensao_salarial
    numeric nota_geral "materializada"
    text bio
  }

  CONTRATACOES {
    uuid id PK
    uuid vaga_id FK
    uuid candidato_id FK
    uuid restaurante_id FK
    numeric preco_acordado
    text status "solicitada|aceita|recusada|concluida|cancelada"
    timestamptz solicitado_em
    timestamptz respondido_em
    numeric nota_entrega
    numeric nota_pontualidade
    bool attr_cancelamento
  }

  CANDIDATO_SELOS {
    uuid candidato_id FK
    text selo "pontual|flexivel"
  }
